@@ -1,3 +1,7 @@
+2002-11-03  Harald Harders  <h.harders@tu-bs.de>
+
+	* src/save.c: Fix crash from saving arrowstyle.
+
 2002-11-01  Ethan Merritt  <merritt@u.washington.edu>
 
         * src/axis.c src/gadgets.c src/graph3d.c src/term.c term/pdf.trm: 
@@ -1413,7 +1417,7 @@
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2002/10/31 20:01:54 $).
+	last modification date (from the tag $Date: 2002/11/01 20:14:30 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
